--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -8,39 +8,39 @@ appDescription=Zeiterfassung
 
 #~~~ Worklist View ~~~~~~~~~~~~~~~~~~~~~~~~~~
 #XTIT: Worklist view title
-worklistViewTitle=Manage <EmployeesPlural>
+viewModelTitle=Manage <RecordsPlural>
 
 #XTIT: Worklist page title
 worklistTitle=Zeiterfassung
 
 #XTIT: Table view title
-worklistTableTitle=Mitarbeiter
+worklistTableTitle=Arbeitszeiten
 
 #XTOL: Tooltip for the search field
-worklistSearchTooltip=Enter an <Employees> name or a part of it.
+worklistSearchTooltip=Enter an <Records> name or a part of it.
 
 #XBLI: text for a table with no data with filter or search
-worklistNoDataWithSearchText=No matching <EmployeesPlural> found
+worklistNoDataWithSearchText=No matching <RecordsPlural> found
 
 #XTIT: Table view title with placeholder for the number of items
-worklistTableTitleCount=Mitarbeiter ({0})
+worklistTableTitleCount=Arbeitszeiten ({0})
 
-#XTIT: The title of the column containing the surname of Employees
+#XTIT: The title of the column containing the surname of Records
 tableNameColumnTitle=<surname>
 
 
 #XBLI: text for a table with no data
-tableNoDataText=No <EmployeesPlural> are currently available
+tableNoDataText=No <RecordsPlural> are currently available
 
 #XLNK: text for link in 'not found' pages
 backToWorklist=Show Zeiterfassung
 
 #~~~ Object View ~~~~~~~~~~~~~~~~~~~~~~~~~~
 #XTIT: Object view title
-objectViewTitle=<Employees> Details
+objectViewTitle=<Records> Details
 
 #XTIT: Object page title
-objectTitle=<Employees>
+objectTitle=<Records>
 
 #XTIT: Label for the surname
 surnameLabel=surname
@@ -66,11 +66,11 @@ shareSendEmailObjectMessage=<Email body PLEASE REPLACE ACCORDING TO YOUR USE CAS
 #XTIT: Not found view title
 notFoundTitle=Not Found
 
-#YMSG: The Employees not found text is displayed when there is no Employees with this id
-noObjectFoundText=This <Employees> is not available
+#YMSG: The Records not found text is displayed when there is no Records with this id
+noObjectFoundText=This <Records> is not available
 
-#YMSG: The Employees not available text is displayed when there is no data when starting the app
-noObjectsAvailableText=No <EmployeesPlural> are currently available
+#YMSG: The Records not available text is displayed when there is no data when starting the app
+noObjectsAvailableText=No <RecordsPlural> are currently available
 
 #YMSG: The not found text is displayed when there was an error loading the resource (404 error)
 notFoundText=The requested resource was not found
@@ -82,3 +82,6 @@ errorText=Sorry, a technical error occurred! Please try again later.
 
 #YMSG: Multiple errors message
 multipleErrorsText=There have been multiple technical errors. One example: 
+
+BILLED=In Rechnung gest.
+INITIAL=Erfasst
